@@ -9,12 +9,12 @@
 # Licensed under the EUPL, Version 1.1 or – as soon they will be
 # approved by the European Commission - subsequent versions of the
 # EUPL (the "Licence");
-# 
+#
 # You may not use this work except in compliance with the Licence.
 # You may obtain a copy of the Licence at:
-# 
+#
 # http://ec.europa.eu/idabc/eupl5
-# 
+#
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the Licence is distributed on an "AS IS" basis,
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -154,7 +154,7 @@ prepareJavaStatement()
 
     # run it
     export CLASSPATH="$CLASSPATH"
-    INGRID_OPTS="-Dingrid_home=$INGRID_HOME $INGRID_OPTS $JAVA_OPTS"
+    INGRID_OPTS="-Dingrid_home=$INGRID_HOME $INGRID_OPTS $JAVA_OPTS --add-opens java.base/java.lang=ALL-UNNAMED"
 }
 
 startIplug()
@@ -172,7 +172,7 @@ startIplug()
   prepareJavaStatement
 
   CLASS=de.ingrid.iplug.sns.SnsPlug
-  
+
   if [ "$RUN_DIRECTLY" ]; then
     exec "$JAVA" $INGRID_OPTS $CLASS
   else
